2023-08-30T08:10:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6022265666 # 1146
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-30
* notice: last 14d: unq all: 5 4137
* notice: prev accum: outdated-unq outdated-all / unq all: 1646 153316 / 1674 157508
* notice: next accum: outdated-unq outdated-all / unq all: 1646 153316 / 1676 157620
* notice: prev exec diff / last date diff / accum: unq all: +2 +112 -0 -113 / +2 +112 -0 -0 / 2 112
* notice: removed / changed dates: [] / [2023-08-16 2023-08-30]

2023-08-30T00:35:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6019051685 # 1145
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-30
* notice: last 14d: unq all: 5 4138
* notice: prev accum: outdated-unq outdated-all / unq all: 1643 153015 / 1674 157415
* notice: next accum: outdated-unq outdated-all / unq all: 1646 153316 / 1674 157508
* notice: prev exec diff / last date diff / accum: unq all: +0 +93 -0 -54 / +3 +301 -0 -0 / 3 301
* notice: removed / changed dates: [2023-08-15] / [2023-08-16 2023-08-29]

2023-08-29T16:09:56Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6014795402 # 1144
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-29
* notice: last 14d: unq all: 5 4140
* notice: prev accum: outdated-unq outdated-all / unq all: 1643 153015 / 1674 157320
* notice: next accum: outdated-unq outdated-all / unq all: 1643 153015 / 1674 157415
* notice: prev exec diff / last date diff / accum: unq all: +0 +95 -0 -92 / +3 +208 -0 -0 / 3 208
* notice: removed / changed dates: [] / [2023-08-15 2023-08-29]

2023-08-29T08:10:43Z: