@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-08-30T08:10:04Z",
-  "count" : 133,
-  "count_minmax" : [ 112, 300 ],
-  "count_decinc" : [ -167, +300 ],
+  "timestamp" : "2023-08-30T16:09:48Z",
+  "count" : 41,
+  "count_minmax" : [ 41, 300 ],
+  "count_decinc" : [ -259, +300 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
