@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-08-30T08:10:04Z",
+  "timestamp" : "2023-08-30T16:09:48Z",
   "count_outdated" : 153316,
   "uniques_outdated" : 1646,
-  "count" : 157620,
-  "uniques" : 1676,
+  "count" : 157714,
+  "uniques" : 1677,
   "clones" : [
     {
       "timestamp": "2023-08-16T00:00:00Z",
-      "count": 133,
-      "count_minmax": [ 112, 300 ],
-      "count_decinc": [ 167, 300 ],
+      "count": 41,
+      "count_minmax": [ 41, 300 ],
+      "count_decinc": [ 259, 300 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -133,12 +133,12 @@
     },
     {
       "timestamp": "2023-08-30T00:00:00Z",
-      "count": 112,
-      "count_minmax": [ 112, 112 ],
-      "count_decinc": [ 0, 112 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 206,
+      "count_minmax": [ 112, 206 ],
+      "count_decinc": [ 0, 206 ],
+      "uniques": 3,
+      "uniques_minmax": [ 2, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
