@@ -1,10 +1,10 @@
 {
-  "count": 4137,
+  "count": 4139,
   "uniques": 5,
   "clones": [
     {
       "timestamp": "2023-08-16T00:00:00Z",
-      "count": 133,
+      "count": 41,
       "uniques": 2
     },
     {
@@ -74,8 +74,8 @@
     },
     {
       "timestamp": "2023-08-30T00:00:00Z",
-      "count": 112,
-      "uniques": 2
+      "count": 206,
+      "uniques": 3
     }
   ]
 }
