@@ -1,3 +1,12 @@
+2023-08-30T16:09:48Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6027346619 # 1147
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-30
+* notice: last 14d: unq all: 5 4139
+* notice: prev accum: outdated-unq outdated-all / unq all: 1646 153316 / 1676 157620
+* notice: next accum: outdated-unq outdated-all / unq all: 1646 153316 / 1677 157714
+* notice: prev exec diff / last date diff / accum: unq all: +1 +94 -0 -92 / +3 +206 -0 -0 / 3 206
+* notice: removed / changed dates: [] / [2023-08-16 2023-08-30]
+
 2023-08-30T08:10:04Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6022265666 # 1146
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-30
